# escape

./: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: application.hpp  game-engine.hpp  main.cpp  window.cpp  window.hpp
src/components/: collision.hpp  physics.hpp  sprite.hpp
src/ecs/: entity_manager.hpp
src/game/: rectangle.hpp  types.hpp
src/game/cmp/: drag_component.hpp  input_component.hpp  physics_component.hpp  render_component.hpp
src/game/sys/: collider_system.cpp  collider_system.hpp  drag_system.cpp  drag_system.hpp  input_system.cpp  input_system.hpp  physics_system.hpp  render_system.cpp  render_system.hpp  vectorial_field_system.hpp  window_system.cpp  window_system.hpp
